--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black;
 }
 
 .container {
@@ -678,6 +678,11 @@ a {
 
 p {
     font-size: 18px;
+}
+
+.title-text,
+.text-finalaccroche {
+    font-weight: bold;
 }
 
 .tight-width-whitespace {
